# temporal-awareness

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  PR_DESCRIPTION.md  README.md  README_RQ4.md  advisor_meeting.docx  band_structure_eigenstates.py  gap_analysis_neurips.md  gen_all_figs.py  library_versions.txt  paper_draft.md  phase1_completion_report.md  phase3_completion_plan.md  pyproject.toml  requirements-sae-stability.txt  requirements-sherlock.txt  run_final_all.py  run_overnight.py  run_overnight_resume.py  run_rq4_acrostic.py  run_rq4_analysis.py  run_rq4_critfixes.py  run_rq4_domains.py  run_rq4_final.py  run_rq4_fixes.py  run_rq4_fl_fixed.py  run_rq4_futurelens.py  run_rq4_futurelens_v2.py  run_rq4_gentime.py  run_training_dynamics.py  subsection_temporal_stability.tex  test_check.py
.github/workflows/: ci.yml
configs/experiments/: phase3_default.yaml
configs/models/: model_registry.yaml
configs/probes/: probe_defaults.yaml
data/: README.md
data/adversarial/: DATACARD.md  WRITEUP.md
data/cross_task_performance/: 1000_classification_explicit__p_generic__n_generic__p_common_ST__p_common_LT__sym_ST_p__sym_LT_p__n_common_LT__n_common_ST__bidirectional_activation_patch.json  500_classification_explicit__p_generic__n_generic__p_common_ST__p_common_LT__sym_ST_p__sym_LT_p__n_common_LT__n_common_ST__bidirectional_activation_patch.json  classification_explicit__p_common_LT__bidirectional_activation_patch.json  classification_explicit__p_common_ST__bidirectional_activation_patch.json  classification_explicit__p_generic__n_generic__p_common_ST__p_common_LT__sym_ST_p__sym_LT_p__n_common_LT__n_common_ST__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_LT__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_LT__sym_LT_p__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_LT__sym_LT_p__n_common_ST__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_ST__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_ST__sym_ST_p__bidirectional_activation_patch.json  classification_explicit__p_generic__p_common_ST__sym_ST_p__n_common_LT__bidirectional_activation_patch.json
data/filtered_temporal/: gsm8k_humaneval_math_temporal_filtered.json  legalbench_temporal_filtered.json  mbpp_code_review.json  medqa_manual_review_sample.json  medqa_temporal_audited.json  medqa_temporal_curated.json  medqa_temporal_filtered.json
data/raw/: temporal_classification_dataset_6_pairs.json  temporal_scope_activity.json  temporal_scope_caa.json  temporal_scope_clean.json  temporal_scope_explicit_expanded.json  temporal_scope_explicit_expanded_500.json  temporal_scope_for_attribution_patching.json  temporal_scope_for_attribution_patching_for_qwen3.json  (+7 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RELATED_WORK.md  RESEARCH_PROGRAM.md  SETUP.md  research_plan.md
experiments/context_fatigue/: .dockerignore  Dockerfile  pyproject.toml  run_code_review.py  run_medqa.py  run_narrativeqa.py  start.sh
notebooks/: .gitignore  01_reproduce_main_results.ipynb  02_spd_parameter_decomposition.ipynb  03.1_multimodel_probe_validation_analysis.ipynb  03.2_all_probe_methods_validation_analysis.ipynb  03_1_multimodel_probe_validation_analysis.ipynb  03_probe_validation_analysis.ipynb  04_attribution_patching.ipynb  04_attribution_patching_for_phi3.ipynb  04_attribution_patching_for_qwen3.ipynb  05_circuit_tracer_attribute_demo.ipynb  06_explore_models_performance.ipynb  final_node_list.pkl  mmraz-probe-steering-partial-analysis-vast.ipynb  mmraz-probe-variations-question-options-answer.ipynb  mmraz-probe-variations-red-team-20260322-090107.ipynb  mmraz-probe-variations.ipynb  mmraz-qwen-probe-evaluation-vast.ipynb  mmraz-qwen-probe-variations-question-options-answer-vast.ipynb  mmraz-qwen3-probe-artifact-steering-question-options-answer-plots.ipynb  mmraz-qwen3-probe-artifact-steering-question-options-answer-vast.ipynb  mmraz-qwen3-probe-variations-question-options-answer-vast-plots.ipynb  mmraz-red-teaming-run-analysis-full-history.ipynb  mmraz-time-utility-experiment-vast-2.ipynb  mmraz-time-utility-experiment-vast-plots.ipynb  mmraz-time-utility-experiment-vast.ipynb
results/: experiment_results_compiled.md  gpt2_question_options_answer_probe_pooling_metrics.csv  gpt2_question_options_answer_probe_pooling_plus_redteam_20260322-090107_plus_20260403-183445_metrics.csv  gpt2_question_options_answer_probe_red_team_dataset_accuracy_20260322-090107_plus_20260403-183445.csv  mm_intervention_debug_log_layer8.csv  mm_intervention_debug_summary_layer8.csv  mm_intervention_response_logs_debug.csv  mm_intervention_summary_debug.csv  mmraz_probe_steering_options_answer_train_test_gap_Qwen2_5_14B_Instruct_20260328-133625.csv  mmraz_probe_steering_probe_vectors_Qwen2_5_14B_Instruct_20260308-165128.csv  mmraz_probe_steering_probe_vectors_Qwen2_5_14B_Instruct_20260308-175454.csv  mmraz_probe_steering_summary_Qwen2_5_14B_Instruct_20260307-102638.csv  mmraz_probe_steering_summary_Qwen2_5_14B_Instruct_20260307-113318.csv  mmraz_probe_steering_summary_Qwen2_5_14B_Instruct_20260308-222512.csv  mmraz_probe_steering_train_test_gap_Qwen2_5_14B_Instruct_20260307-102638.csv  mmraz_probe_steering_train_test_gap_Qwen2_5_14B_Instruct_20260307-113318.csv  mmraz_probe_steering_train_test_gap_Qwen2_5_14B_Instruct_20260308-092603.csv  mmraz_probe_steering_train_test_gap_Qwen2_5_14B_Instruct_20260308-165128.csv  mmraz_probe_steering_train_test_gap_Qwen2_5_14B_Instruct_20260308-222512.csv
scripts/: create_tram_ordering_dataset.py  temporal_scope_sample.py  test_activation_patching.py  test_hf_attention_hooks.py  validate_probes_gcp.py  verify_all_claims.py
src/: __init__.py
tasks/: lessons.md  todo.md
tests/: __init__.py  conftest.py  test_activation_api.py  test_integration.py  test_patching_metric.py  test_patience_degradation.py  test_preference_loader.py  test_sae_feature_stability.py  test_sequential_activation_tracking.py  test_token_positions.py
(+10738 files in other folders)
