[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-awareness"
version = "0.1.0"
description = "Detecting and steering temporal awareness in LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "latents @ git+https://github.com/justinshenk/latents.git",
    "huggingface_hub>=0.31.0",
    "torch>=2.0.0",
    "transformer_lens>=2.16.1",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "plotly>=6.5.1"
]

[project.scripts]
temporal-awareness-eap-ig-workflow = "src.workflows.eap_ig_workflow:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
eap_ig = [
    "mech_interp_toolkit @ git+https://github.com/SD-interp/mech-interp-toolkit.git@789b12ce0f448d1cd5747be9b743a950e6cb7a90"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow (multi-architecture or benchmark)"
]
