[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-awareness"
version = "0.1.0"
description = "Detecting and steering temporal awareness in LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "latents @ git+https://github.com/justinshenk/latents.git",
    "huggingface_hub>=0.31.0",
    "torch>=2.0.0",
    "transformer_lens>=3.0.0b1",
    "transformers>=5.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "plotly>=6.5.1",
    "ijson>=3.5.0",
    "tiktoken>=0.5.0",
    "nnsight>=0.3.0",
    "pyvene>=0.1.0",
    "pacmap>=0.9.1",
    "tensorboard>=2.20.0",
    "umap-learn>=0.5.11",
    "huggingface-hub[cli]>=1.7.1",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-bootstrap-templates>=1.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.84.0",
]

[project.scripts]
temporal-awareness-eap-ig-workflow = "src.workflows.eap_ig_workflow:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-timeout", "black", "ruff"]
api = ["openai>=1.0.0", "anthropic>=0.25.0", "tiktoken>=0.5.0"]
eap_ig = [
    "mech_interp_toolkit @ git+https://github.com/SD-interp/mech-interp-toolkit.git@789b12ce0f448d1cd5747be9b743a950e6cb7a90"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow (multi-architecture or benchmark)"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E741",   # ambiguous variable name (l, I, O) — standard in ML code for layers/indices
    "E402",   # module-level import not at top — scripts use conditional imports after arg parsing
    "F403",   # star imports — used in __init__.py auto-export pattern
    "F405",   # may be undefined from star import — companion to F403
    "F841",   # unused variable — common in research code (intermediate results, debugging)
    "E501",   # line too long — handled by formatter
    "E702",   # multiple statements on one line (semicolon) — idiomatic in matplotlib plotting code
    "E731",   # lambda assignment — used for inline filter functions
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]  # unused imports common in exploratory scripts
"tests/*" = ["F401"]
"src/**/__init__.py" = ["F401", "F811"]  # unused imports in __init__.py (re-exports)
