[project]
name = "medqa-interactive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic>=0.84.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
